# openFlowServer

./: .gitignore  Cargo.toml  README.md  build.rs  requirements.txt  root.json  timestamp.json
.github/workflows/: goldenimage.yml  unittests.yml  update.yml
ansible/: ansible-playbook.yml
config/: openflow_api.service.j2
scripts/: downloadSMAP.py  download_ea_datasets.py  ea_download_process.py  init_dbs.py  openflow_api.py  openflow_cron.py  setup_ea_datasets.py  smapprocessor.py  soilgrids.py  staticprocessor.py  stations.py  vegdri_download.py
scripts/tests/: earthaccess_test.py
snapshots/: v0.1.json
src/: soilmoisture.rs
targets/: openflowserver.json
