[package]
name = "soil_moisture_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0.0"
serde = { version = "1.0.130", features = ["derive"] }
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.9.0"
thiserror = "1.0.25"
governor = "0.4.1"
reqwest = "0.11.4"
hdf5 = "0.12.1"
rusqlite = "0.27.0"
rayon = "1.5.1"
tuf = "0.14.0"
url = "2.2.2"
tempfile = "3.3.0"

[dependencies.actix-web]
features = ["rt-tokio"]

[dependencies.reqwest]
features = ["blocking", "json"]

[dependencies.tuf]
features = ["json", "reqwest-blocking-client"]