[package]
name = "soil_moisture_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.9.0"
thiserror = "1.0.25"
governor = "0.4.1"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
hdf5 = "0.8.1"
rusqlite = "0.27.0"
rayon = "1.5.1"
tuf = "0.3.0-beta12"
ring = "0.16.20"
url = "2.2.2"
tempfile = "3.3.0"
dashmap = "6.0.1"

[[bin]]
name = "soil_moisture_api"
path = "src/soilmoisture.rs"

[build]
hdf5_dir = "C:\\HDF5"